修改示例动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,12 @@
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
             >
         </activity>
+
+        <activity android:name=".DemoActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
+            >
+        </activity>
     </application>
 
 
